# www.justinmanley.work

./: .gitignore  .stylelintrc.json  CNAME  README.md  RecordScreenshot.hs  Site.hs  bower.json  deploy.sh  index.html  outoftheyards.cabal  package-lock.json  package.json  package.yaml  stack.yaml
.githooks/: pre-commit
_site/: index.html
_site/posts/camille-utterback-sustaining-presence/: index.html
_site/posts/dorchester-art-housing-collaborative/: index.html
_site/posts/infinity-engine/: index.html
_site/posts/sohei-nishino-new-work/: index.html
_site/writing/: index.html
about/: index.html
art/: index.html
artworks/beauty-in-the-mind-of-the-beholder/: index.html  index.md
artworks/ipar-mosaics/: index.html  index.md
artworks/ipar-mosaics/original-images/: README.txt
artworks/reference-human/: index.html  index.md
css/: default.css  footer.scss  gallery.scss  navbar.css  navbar.scss  newsletter.scss  style.css  style.scss  variables.scss
feed/: atom.xml
pages/: about.md  site-credits.md
posts/a-sunroom-of-ones-own/: index.html  index.md
posts/ai-more-than-human/: index.md
posts/alan-rath-again/: index.html  index.md
posts/between-them-hosfelt/: index.md
posts/camille-utterback-sustaining-presence/: index.html  index.md
posts/clive-mccarthy-electric-paintings/: index.md
posts/computer-art-with-a-human-touch/: index.md
posts/dorchester-art-housing-collaborative/: index.html  index.md
posts/farewell-to-the-folk-art-museum/: index.html  index.md
posts/hosfelt-frankenstein/: index.md
posts/how-I-learned-to-stop-worrying-and-love-optimization/: index.html  index.md
posts/infinity-engine/: index.html  index.md
posts/internet-archaeology/: index.md
posts/james-turrell-aten-reign/: index.html  index.md
posts/jeanne-gang-north-campus-dormitory/: index.html  index.md
posts/lifestory/: index.md
posts/lightningfield/: index.md
posts/notegraph/: index.md
posts/patricia-piccinini-inter-natural/: index.md
posts/ragnar-kjartansson-the-visitors/: index.md
posts/return-to-radiant-city/: index.html  index.md
posts/sohei-nishino-new-work/: index.html  index.md
posts/teamLAB-living-digital-space-future-parks/: index.md
posts/teamLab-living-digital-space-future-parks/: index.html  index.md
posts/three-excursions-in-artificial-existence/: index.html  index.md
posts/viñoly-center-for-care-and-discovery/: index.html  index.md
projects/: Projects.hs
projects/lifestory/: Lifestory.hs  index.html
projects/lightningfield/: LightningField.hs  index.html
projects/notegraph/: Notegraph.hs  index.html  package-lock.json  package.json  setup.sh  style.css  style.scss
site-credits/: index.html
src/OutOfTheYards/: Config.hs
src/Screenshot/: Capture.hs
src/Site/: Config.hs  PageCompiler.hs  PostLength.hs  Sass.hs  Strings.hs  Url.hs
talks/: art_computing_and_creativity.md  ethics_of_technology_in_silicon_valley.md  eyeo_2019.md  index.html  interactive_summit_2019.md
templates/: artwork.html  artwork_preview.html  default.html  gallery.html  home.html  page.html  post.html  post_head.html  post_preview.html  talks.html  writing.html
tests/: Test.hs
tests/Screenshot/: Test.hs
tests/Site/: PostLengthTest.hs  UrlTest.hs
tools/: compress-images.sh  deploy.sh  test.sh
writing/: index.html
writing/architecture/: index.html
writing/art/: index.html
writing/fiction/: index.html
writing/interview/: index.html
(+70 files in other folders)
