Name:               outoftheyards
Version:            0.1.0.0

Synopsis:           Blog about cities and buildings.

License:            GPL-3
License-file:       LICENSE

Author:             Justin Manley
Maintainer:         manleyjster@gmail.com
Copyright:          Copyright (c) 2015 Justin Manley

Category:           Web

Cabal-version:      >= 1.10
Build-type:         Simple

Executable site
  Main-is:          Site.hs

  Build-depends:    base == 4.*,
                    hakyll == 4.7.*

  Ghc-options:      -threaded

  Default-language: Haskell2010

executable download-content 
  hs-source-dirs:   src

  main-is:          OutOfTheYards/Content/Download.hs

  build-depends:    base == 4.*,
                    hakyll == 4.7.*,
                    gogol,
                    gogol-core,
                    gogol-drive

  default-language: Haskell2010
