Name:               outoftheyards
Version:            0.1.0.0

Synopsis:           Blog about cities and buildings.

License:            GPL-3
License-file:       LICENSE

Author:             Justin Manley
Maintainer:         manleyjster@gmail.com
Copyright:          Copyright (c) 2015 Justin Manley

Category:           Web

Cabal-version:      >= 1.10
Build-type:         Simple

Library
  Hs-source-dirs:   src

  Exposed-modules:  OutOfTheYards.Config,
                    OutOfTheYards.Content.Clean,
                    OutOfTheYards.Content.Normalize

  Build-depends:    base == 4.*,
                    filepath,
                    hakyll == 4.7.*,
                    text,
                    xml,
                    regex-compat

  Default-language: Haskell2010

Executable site
  Main-is:          Site.hs

  Build-depends:    base == 4.*,
                    binary,
                    hakyll == 4.7.*,
                    outoftheyards

  Ghc-options:      -threaded

  Default-language: Haskell2010

Executable download-content
  Hs-source-dirs:   src

  Main-is:          OutOfTheYards/Content/Download.hs

  Build-depends:    base == 4.*,
                    bytestring,
                    unordered-containers,
                    filepath,
                    hakyll == 4.7.*,
                    gogol,
                    gogol-core,
                    gogol-drive,
                    google-oauth2,
                    lens,
                    text

  Default-language: Haskell2010

