Name:               outoftheyards
Version:            0.1.0.0

Synopsis:           Blog about cities and buildings.

License:            GPL-3
License-file:       LICENSE

Author:             Justin Manley
Maintainer:         manleyjster@gmail.com
Copyright:          Copyright (c) 2015 Justin Manley

Category:           Web

Cabal-version:      >= 1.10
Build-type:         Simple

Library
  Hs-source-dirs:   src

  Exposed-modules:  OutOfTheYards.Content.Normalize

  Build-depends:    base == 4.*,
                    filepath,
                    hakyll == 4.7.*,
                    xml,
                    url

  Default-language: Haskell2010

Executable site
  Main-is:          Site.hs

  Build-depends:    base == 4.*,
                    binary,
                    hakyll == 4.7.*,
                    outoftheyards

  Ghc-options:      -threaded

  Default-language: Haskell2010

